# agent-command-preflight

./: Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml
cases/: README.md  agent-command-safety.jsonl  parser-smoke.jsonl
docs/: evaluation.md  walkthrough.md
reports/: git-status.html  git-status.md  go-test-exec.html  go-test-exec.md  home-dotfile.html  home-dotfile.md  network-to-exec.html  network-to-exec.md  secret-exfil.html  secret-exfil.md
src/: analyzer.rs  main.rs  model.rs  policy.rs
