[package]
name = "agent-command-preflight"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.26.9"
tree-sitter-bash = "0.25.1"

[profile.release]
lto = true
strip = true
